--- a/scene_builder/wizard_screen_1.fxml
+++ b/scene_builder/wizard_screen_1.fxml
@@ -13,11 +13,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="400.0" prefWidth="704.0" VBox.vgrow="ALWAYS">
       <children>
-            <VBox layoutX="370.0" layoutY="92.0" prefHeight="112.0" prefWidth="256.0">
+            <VBox layoutX="370.0" layoutY="88.0" prefHeight="112.0" prefWidth="256.0">
                <children>
                   <HBox alignment="CENTER" prefHeight="56.0" prefWidth="258.0">
                      <children>
@@ -42,9 +42,9 @@
                </children>
             </VBox>
             <ListView layoutX="14.0" layoutY="88.0" prefHeight="200.0" prefWidth="200.0" />
-            <Button layoutX="233.0" layoutY="128.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="115.0" text="&lt;-- Add" textAlignment="CENTER" />
-            <Button layoutX="233.0" layoutY="248.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="115.0" text="Remove --&gt;" textAlignment="CENTER" />
-            <Text layoutX="20.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add new Session:" textAlignment="CENTER" wrappingWidth="600.9830722808838">
+            <Button layoutX="233.0" layoutY="92.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="115.0" text="&lt;-- Add" textAlignment="CENTER" />
+            <Button layoutX="233.0" layoutY="148.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="115.0" text="Remove --&gt;" textAlignment="CENTER" />
+            <Text layoutX="20.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add new Session:" textAlignment="CENTER" wrappingWidth="600.9830722808838">
                <font>
                   <Font size="30.0" />
                </font>
@@ -53,9 +53,12 @@
     </AnchorPane>
       <ButtonBar prefHeight="40.0" prefWidth="186.0">
          <buttons>
-            <BottomNavigationButton text="&lt;Previous" />
+            <BottomNavigationButton text="&lt; Previous" />
             <BottomNavigationButton text="Next &gt;" />
          </buttons>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
          <padding>
             <Insets right="20.0" />
          </padding>
