--- a/scene_builder/wizard_screen_3.fxml
+++ b/scene_builder/wizard_screen_3.fxml
@@ -4,135 +4,73 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <children>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
-            <Text layoutX="20.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Topics to the Sessions:" textAlignment="CENTER" wrappingWidth="600.9830722808838">
+            <VBox layoutX="366.0" layoutY="92.0" prefHeight="124.0" prefWidth="256.0">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Add selected as:" textAlignment="CENTER" wrappingWidth="255.89453125">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Text>
+                  <RadioButton mnemonicParsing="false" prefHeight="26.0" prefWidth="256.0" text="Voter" />
+                  <RadioButton mnemonicParsing="false" prefHeight="26.0" prefWidth="256.0" text="Observer" />
+                  <Button mnemonicParsing="false" prefHeight="41.0" prefWidth="256.0" text="Verify and Register">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Give the following code to the client for verification:" textAlignment="CENTER" wrappingWidth="256.0">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="15.0" />
+                     </VBox.margin>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="X X X X X " textAlignment="CENTER" wrappingWidth="255.13671875">
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Text>
+               </children>
+            </VBox>
+            <Button layoutX="20.0" layoutY="306.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="227.0" text="Unregister Selected " textAlignment="CENTER" />
+            <Text layoutX="20.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Register participants:" textAlignment="CENTER" wrappingWidth="600.9830722808838">
                <font>
                   <Font size="30.0" />
                </font>
             </Text>
-            <HBox layoutX="11.0" layoutY="61.0" prefHeight="100.0" prefWidth="200.0" spacing="15.0">
-               <children>
-                  <VBox prefHeight="200.0" prefWidth="100.0">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Registered Sessions:">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </Text>
-                        <ListView prefHeight="200.0" prefWidth="200.0" />
-                     </children>
-                  </VBox>
-                  <VBox prefHeight="348.0" prefWidth="274.0" spacing="15.0">
-                     <children>
-                        <VBox prefHeight="45.0" prefWidth="274.0">
-                           <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Topic Title:" textAlignment="CENTER" wrappingWidth="273.25390625">
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                              </Text>
-                           </children>
-                        </VBox>
-                        <VBox prefHeight="147.0" prefWidth="274.0">
-                           <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Topic Description:" textAlignment="CENTER" wrappingWidth="273.25390625">
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                              </Text>
-                              <TextArea prefHeight="117.0" prefWidth="274.0" />
-                           </children>
-                        </VBox>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
-                           <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Type of Vote:" textAlignment="CENTER" wrappingWidth="273.25390625">
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                                 <VBox.margin>
-                                    <Insets bottom="5.0" />
-                                 </VBox.margin>
-                              </Text>
-                              <RadioButton mnemonicParsing="false" prefHeight="33.0" prefWidth="274.0" text="Yes/No/Abstain" textAlignment="CENTER">
-                                 <font>
-                                    <Font size="15.0" />
-                                 </font>
-                                 <VBox.margin>
-                                    <Insets bottom="10.0" />
-                                 </VBox.margin>
-                              </RadioButton>
-                              <RadioButton mnemonicParsing="false" prefHeight="33.0" prefWidth="274.0" text="Multiple Choice" textAlignment="CENTER">
-                                 <font>
-                                    <Font size="15.0" />
-                                 </font>
-                              </RadioButton>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Αdd Choice:" textAlignment="CENTER" wrappingWidth="273.9814453125">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                                 <VBox.margin>
-                                    <Insets top="5.0" />
-                                 </VBox.margin>
-                              </Text>
-                              <HBox prefHeight="100.0" prefWidth="200.0">
-                                 <children>
-                                    <TextField prefHeight="25.0" prefWidth="237.0" />
-                                    <Button mnemonicParsing="false" text="Add" />
-                                 </children>
-                              </HBox>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Current Choices:" textAlignment="CENTER" wrappingWidth="273.9814453125">
-                                 <font>
-                                    <Font size="18.0" />
-                                 </font>
-                              </Text>
-                              <ListView maxHeight="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="274.0" />
-                              <HBox alignment="CENTER" prefHeight="25.0" prefWidth="200.0">
-                                 <children>
-                                    <Button mnemonicParsing="false" text="Remove" />
-                                 </children>
-                                 <VBox.margin>
-                                    <Insets top="5.0" />
-                                 </VBox.margin>
-                              </HBox>
-                           </children>
-                        </VBox>
-                     </children>
-                  </VBox>
-                  <VBox prefHeight="200.0" prefWidth="100.0">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Topics for selected:">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </Text>
-                        <ListView prefHeight="200.0" prefWidth="200.0" />
-                     </children>
-                  </VBox>
-               </children>
-            </HBox>
+            <TableView layoutX="20.0" layoutY="92.0" prefHeight="200.0" prefWidth="227.0">
+              <columns>
+                <TableColumn prefWidth="75.0" text="Name" />
+                <TableColumn prefWidth="75.0" text="Device IP" />
+                  <TableColumn prefWidth="75.0" text="Role" />
+              </columns>
+            </TableView>
       </children>
     </AnchorPane>
       <ButtonBar prefHeight="40.0" prefWidth="186.0">
          <buttons>
-            <BottomNavigationButton text="&lt;Previous" />
-            <BottomNavigationButton text="Next &gt;" />
+            <BottomNavigationButton text="&lt; Previous" />
+            <BottomNavigationButton text="Start General Meeting &gt;" />
          </buttons>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
          <padding>
             <Insets right="20.0" />
          </padding>
