--- a/scene_builder/wizard_screen_2.fxml
+++ b/scene_builder/wizard_screen_2.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.BottomNavigationButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
@@ -126,16 +125,16 @@
       </children>
     </AnchorPane>
       <ButtonBar prefHeight="40.0" prefWidth="186.0">
-         <buttons>
-            <BottomNavigationButton text="&lt; Previous" />
-            <BottomNavigationButton text="Next &gt;" />
-         </buttons>
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
          <padding>
             <Insets right="20.0" />
          </padding>
+         <buttons>
+            <Button mnemonicParsing="false" text="&lt; Previous" />
+            <Button mnemonicParsing="false" text="Next &gt;" />
+         </buttons>
       </ButtonBar>
   </children>
 </VBox>
