--- a/src/main/resources/org/easyvote/welcome_screen.fxml
+++ b/src/main/resources/org/easyvote/welcome_screen.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.easyvote.WelcomeScreenController">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <children>
@@ -25,7 +25,7 @@
                   <Font size="18.0" />
                </font>
             </Text>
-            <Button layoutX="136.0" layoutY="256.0" mnemonicParsing="false" text="Start new General Meeting Voting Procedure">
+            <Button fx:id="startButton" layoutX="136.0" layoutY="256.0" mnemonicParsing="false" onAction="#switchToWizardScreen" text="Start new General Meeting Voting Procedure">
                <font>
                   <Font name="Cambria" size="18.0" />
                </font>
