--- a/src/main/resources/org/easyvote/wizard_screen_1.fxml
+++ b/src/main/resources/org/easyvote/wizard_screen_1.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -16,7 +15,15 @@
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="400.0" prefWidth="704.0" VBox.vgrow="ALWAYS">
       <children>
-            <VBox layoutX="370.0" layoutY="88.0" prefHeight="112.0" prefWidth="256.0">
+            <ListView layoutX="14.0" layoutY="88.0" prefHeight="200.0" prefWidth="200.0" />
+            <Button layoutX="233.0" layoutY="92.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="115.0" text="&lt;-- Add" textAlignment="CENTER" />
+            <Button layoutX="233.0" layoutY="148.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="115.0" text="Remove --&gt;" textAlignment="CENTER" />
+            <Text layoutX="20.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add new Session:" textAlignment="CENTER" wrappingWidth="600.9830722808838">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </Text>
+            <VBox layoutX="352.0" layoutY="92.0" prefHeight="97.0" prefWidth="274.0">
                <children>
                   <HBox alignment="CENTER" prefHeight="56.0" prefWidth="258.0">
                      <children>
@@ -28,26 +35,22 @@
                         <TextField prefWidth="186.0" />
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER" prefHeight="56.0" prefWidth="258.0">
+                  <VBox prefHeight="57.0" prefWidth="274.0">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Type:" wrappingWidth="58.07552146911621">
-                           <font>
-                              <Font size="22.0" />
-                           </font>
-                        </Text>
-                        <ChoiceBox prefHeight="28.0" prefWidth="186.0" />
+                        <HBox alignment="CENTER" prefHeight="56.0" prefWidth="258.0">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Type:" wrappingWidth="58.07552146911621">
+                                 <font>
+                                    <Font size="22.0" />
+                                 </font>
+                              </Text>
+                              <TextField prefWidth="186.0" />
+                           </children>
+                        </HBox>
                      </children>
-                  </HBox>
+                  </VBox>
                </children>
             </VBox>
-            <ListView layoutX="14.0" layoutY="88.0" prefHeight="200.0" prefWidth="200.0" />
-            <Button layoutX="233.0" layoutY="92.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="115.0" text="&lt;-- Add" textAlignment="CENTER" />
-            <Button layoutX="233.0" layoutY="148.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="115.0" text="Remove --&gt;" textAlignment="CENTER" />
-            <Text layoutX="20.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add new Session:" textAlignment="CENTER" wrappingWidth="600.9830722808838">
-               <font>
-                  <Font size="30.0" />
-               </font>
-            </Text>
       </children>
     </AnchorPane>
       <ButtonBar prefHeight="40.0" prefWidth="186.0">
