--- a/src/main/resources/org/easyvote/wizard_screen_1.fxml
+++ b/src/main/resources/org/easyvote/wizard_screen_1.fxml
@@ -12,12 +12,12 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.easyvote.WizardScreen1Controller">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="400.0" prefWidth="704.0" VBox.vgrow="ALWAYS">
       <children>
-            <Button layoutX="233.0" layoutY="92.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="115.0" text="&lt;-- Add" textAlignment="CENTER" />
-            <Button layoutX="233.0" layoutY="148.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="115.0" text="Remove --&gt;" textAlignment="CENTER" />
+            <Button fx:id="addButton" layoutX="233.0" layoutY="92.0" mnemonicParsing="false" onAction="#addTopic" prefHeight="40.0" prefWidth="115.0" text="&lt;-- Add" textAlignment="CENTER" />
+            <Button fx:id="RemoveButton" layoutX="233.0" layoutY="148.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="115.0" text="Remove --&gt;" textAlignment="CENTER" />
             <Text layoutX="20.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add new Session:" textAlignment="CENTER" wrappingWidth="600.9830722808838">
                <font>
                   <Font size="30.0" />
@@ -32,7 +32,7 @@
                               <Font size="22.0" />
                            </font>
                         </Text>
-                        <TextField prefWidth="186.0" />
+                        <TextField fx:id="titleInput" prefWidth="186.0" />
                      </children>
                   </HBox>
                   <VBox prefHeight="57.0" prefWidth="274.0">
@@ -44,7 +44,7 @@
                                     <Font size="22.0" />
                                  </font>
                               </Text>
-                              <TextField prefWidth="186.0" />
+                              <TextField fx:id="typeInput" prefWidth="186.0" />
                            </children>
                         </HBox>
                      </children>
@@ -67,8 +67,8 @@
             <Insets right="20.0" />
          </padding>
          <buttons>
-            <Button mnemonicParsing="false" text="&lt; Previous" />
-            <Button mnemonicParsing="false" text="Next &gt;" />
+            <Button fx:id="previousButton" mnemonicParsing="false" onAction="#switchToPreviousScreen" text="&lt; Previous" />
+            <Button fx:id="nextButton" mnemonicParsing="false" text="Next &gt;" />
          </buttons>
       </ButtonBar>
   </children>
