--- a/src/main/resources/org/easyvote/welcome_screen.fxml
+++ b/src/main/resources/org/easyvote/welcome_screen.fxml
@@ -1,36 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.easyvote.WelcomeScreenController">
+<VBox alignment="CENTER" prefHeight="400.0" prefWidth="640.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.easyvote.WelcomeScreenController">
   <children>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
-      <children>
-            <Text layoutX="211.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="EasyVote" textAlignment="CENTER" wrappingWidth="218.900390625">
-               <font>
-                  <Font name="Cambria" size="48.0" />
-               </font>
-            </Text>
-            <Text layoutX="237.0" layoutY="128.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome EESTECers!" textAlignment="CENTER">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Text>
-            <Text layoutX="275.0" layoutY="219.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Let's begin:">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Text>
-            <Button fx:id="startButton" layoutX="136.0" layoutY="256.0" mnemonicParsing="false" onAction="#switchToWizardScreen" text="Start new General Meeting Voting Procedure">
-               <font>
-                  <Font name="Cambria" size="18.0" />
-               </font>
-            </Button>
-      </children>
-    </AnchorPane>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="EasyVote" textAlignment="CENTER" wrappingWidth="218.900390625">
+         <font>
+            <Font name="Liberation Sans" size="48.0" />
+         </font>
+      </Text>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome EESTECers!" textAlignment="CENTER">
+         <font>
+            <Font name="Liberation Sans" size="18.0" />
+         </font>
+      </Text>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Let's begin:">
+         <font>
+            <Font name="Liberation Sans" size="18.0" />
+         </font>
+         <VBox.margin>
+            <Insets top="60.0" />
+         </VBox.margin>
+      </Text>
+      <Button fx:id="startButton" mnemonicParsing="false" onAction="#switchToWizardScreen" text="Start new General Meeting Voting Procedure">
+         <font>
+            <Font name="Liberation Sans" size="18.0" />
+         </font>
+      </Button>
   </children>
+   <opaqueInsets>
+      <Insets />
+   </opaqueInsets>
+   <padding>
+      <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+   </padding>
 </VBox>
