--- a/src/main/resources/org/easyvote/wizard_screen_1.fxml
+++ b/src/main/resources/org/easyvote/wizard_screen_1.fxml
@@ -16,11 +16,17 @@
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="400.0" prefWidth="704.0" VBox.vgrow="ALWAYS">
       <children>
-            <Button fx:id="addButton" layoutX="233.0" layoutY="92.0" mnemonicParsing="false" onAction="#addSession" prefHeight="40.0" prefWidth="115.0" text="&lt;-- Add" textAlignment="CENTER" />
-            <Button fx:id="RemoveButton" layoutX="233.0" layoutY="148.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="115.0" text="Remove --&gt;" textAlignment="CENTER" />
+            <Button fx:id="addButton" layoutX="233.0" layoutY="92.0" mnemonicParsing="false" onAction="#addSession" prefHeight="40.0" prefWidth="115.0" text="&lt;-- Add" textAlignment="CENTER">
+               <font>
+                  <Font name="Liberation Sans" size="14.0" />
+               </font></Button>
+            <Button fx:id="RemoveButton" layoutX="233.0" layoutY="148.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="115.0" text="Remove --&gt;" textAlignment="CENTER">
+               <font>
+                  <Font name="Liberation Sans" size="14.0" />
+               </font></Button>
             <Text layoutX="20.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add new Session:" textAlignment="CENTER" wrappingWidth="600.9830722808838">
                <font>
-                  <Font size="30.0" />
+                  <Font name="Liberation Sans" size="28.0" />
                </font>
             </Text>
             <VBox layoutX="352.0" layoutY="92.0" prefHeight="97.0" prefWidth="274.0">
@@ -29,7 +35,7 @@
                      <children>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Title:" wrappingWidth="58.07552146911621">
                            <font>
-                              <Font size="22.0" />
+                              <Font name="Liberation Sans" size="22.0" />
                            </font>
                         </Text>
                         <TextField fx:id="titleInput" prefWidth="186.0" />
@@ -41,7 +47,7 @@
                            <children>
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Type:" wrappingWidth="58.07552146911621">
                                  <font>
-                                    <Font size="22.0" />
+                                    <Font name="Liberation Sans" size="22.0" />
                                  </font>
                               </Text>
                               <TextField fx:id="typeInput" prefWidth="186.0" />
@@ -51,10 +57,10 @@
                   </VBox>
                </children>
             </VBox>
-            <TableView layoutX="14.0" layoutY="92.0" prefHeight="200.0" prefWidth="200.0">
+            <TableView fx:id="sessionTable" layoutX="14.0" layoutY="92.0" prefHeight="200.0" prefWidth="200.0">
               <columns>
-                <TableColumn prefWidth="101.0" text="Title" />
-                <TableColumn prefWidth="98.0" text="Type" />
+                <TableColumn fx:id="titleColumn" prefWidth="101.0" text="Title" />
+                <TableColumn fx:id="typeColumn" prefWidth="98.0" text="Type" />
               </columns>
             </TableView>
       </children>
@@ -67,8 +73,14 @@
             <Insets right="20.0" />
          </padding>
          <buttons>
-            <Button fx:id="previousButton" mnemonicParsing="false" onAction="#switchToPreviousScreen" text="&lt; Previous" />
-            <Button fx:id="nextButton" mnemonicParsing="false" text="Next &gt;" />
+            <Button fx:id="previousButton" mnemonicParsing="false" onAction="#switchToPreviousScreen" text="&lt; Previous">
+               <font>
+                  <Font name="Liberation Sans" size="12.0" />
+               </font></Button>
+            <Button fx:id="nextButton" mnemonicParsing="false" text="Next &gt;">
+               <font>
+                  <Font name="Liberation Sans" size="12.0" />
+               </font></Button>
          </buttons>
       </ButtonBar>
   </children>
