--- a/src/main/resources/org/easyvote/wizard_screen_1.fxml
+++ b/src/main/resources/org/easyvote/wizard_screen_1.fxml
@@ -12,15 +12,15 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.easyvote.WizardScreen1Controller">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="362.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.easyvote.WizardScreen1Controller">
   <children>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="400.0" prefWidth="704.0" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="318.0" prefWidth="640.0">
       <children>
             <Button fx:id="addButton" layoutX="233.0" layoutY="92.0" mnemonicParsing="false" onAction="#addSession" prefHeight="40.0" prefWidth="115.0" text="&lt;-- Add" textAlignment="CENTER">
                <font>
                   <Font name="Liberation Sans" size="14.0" />
                </font></Button>
-            <Button fx:id="RemoveButton" layoutX="233.0" layoutY="148.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="115.0" text="Remove --&gt;" textAlignment="CENTER">
+            <Button fx:id="RemoveButton" layoutX="233.0" layoutY="148.0" mnemonicParsing="false" onAction="#removeSession" prefHeight="40.0" prefWidth="115.0" text="Remove --&gt;" textAlignment="CENTER">
                <font>
                   <Font name="Liberation Sans" size="14.0" />
                </font></Button>
@@ -65,7 +65,7 @@
             </TableView>
       </children>
     </AnchorPane>
-      <ButtonBar prefHeight="40.0" prefWidth="186.0">
+      <ButtonBar prefHeight="114.0" prefWidth="640.0">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
